--- a/Unreal/Environments/Blocks/Blocks.uproject
+++ b/Unreal/Environments/Blocks/Blocks.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.18",
+	"EngineAssociation": "{1B9945FB-3A09-121E-0027-01C716872F98}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
